# climaqc

./: LICENSE  README.md  pyproject.toml
climaqc/: __init__.py
climaqc/climate/: climatology.py
climaqc/core/: flags.py  schema.py
climaqc/datasets/: __init__.py  demo_precipitacion_diaria.csv  demo_temperatura_media_diaria.csv  demo_tmax_diaria.csv  demo_tmin_diaria.csv  metadata_demo.json
climaqc/eda/: summary.py
climaqc/impute/: mice.py
climaqc/io/: readers.py
climaqc/pipelines/: daily_pipeline.py
climaqc/qc/: ml_isoforest.py
examples/: ejemplo_pipeline_precip.py
tests/: test_import.py
