[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClimaQC"
version = "0.1.0"
description = "Control de calidad, atípicos e imputación MICE-like para series diarias climáticas (ES)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Bruce Anthony Tumbaco Vega"}]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "matplotlib>=3.6"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["climaqc*"]

[tool.setuptools.package-data]
climaqc = ["datasets/*.csv", "datasets/*.json"]
